https://issues.apache.org/jira/browse/EXTSCRIPT-98
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@926567 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-bundles/pom.xml
+++ b/extscript-bundles/pom.xml
@@ -21,8 +21,8 @@
     </parent>
 
     <modules>
-        <module>myfaces12</module>
-        <module>myfaces20</module>
+        <module>extscript-myfaces12-bundle</module>
+        <module>extscript-myfaces20-bundle</module>
     </modules>
 
    
