--- a/extscript-core-root/pom.xml
+++ b/extscript-core-root/pom.xml
@@ -18,9 +18,9 @@
     </parent>
 
     <modules>
-        <module>core</module>
-        <module>myfaces12-extensions</module>
-        <module>myfaces2-extensions</module>
-        <module>core-java6</module>
+        <module>extscript-core</module>
+        <module>extscript-myfaces12-extensions</module>
+        <module>extscript-myfaces2-extensions</module>
+        <module>extscript-core-java6</module>
     </modules>
 </project>	
