--- a/pom.xml
+++ b/pom.xml
@@ -129,16 +129,20 @@
                     <target>1.5</target>
                 </configuration>
             </plugin>
+
+
         </plugins>
+
     </build>
+
 
     <reporting>
         <plugins>
 
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>changelog-maven-plugin</artifactId>
-                <version>2.0-beta-1</version>
+
+                <artifactId>maven-changelog-plugin</artifactId>
+                <version>2.1</version>
                 <reportSets>
                     <reportSet>
                         <id>dual-report</id>
@@ -193,32 +197,31 @@
         </plugins>
     </reporting>
 
-    <profiles>
+
+   <profiles>
+        <!-- This profile is invoked by -DprepareRelease=true.  This allows mvn release:prepare to
+            run successfully on the assembly projects. -->
         <profile>
-            <id>generate-assembly</id>
+            <id>prepare-release</id>
             <activation>
                 <property>
-                    <name>performRelease</name>
-                    <value>true</value>
+                    <name>prepareRelease</name>
                 </property>
             </activation>
+            <modules>
+                <module>assembly</module>
+            </modules>
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>attach-javadoc</id>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
+                        <artifactId>maven-release-plugin</artifactId>
+                        <configuration>
+                            <arguments>-DprepareRelease</arguments>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
         </profile>
-    </profiles>
+    </profiles> 
 
 </project>
