https://issues.apache.org/jira/browse/EXTSCRIPT-95 fixed a typo in the bundle :-)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@926656 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-bundles/pom.xml
+++ b/extscript-bundles/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <description>
-        Meta bundles bundeling the various ext-script
+        Meta bundles bundling the various ext-script
         combinations into one coherent package per
         jsf version
     </description>
