changed docs dropped an empty file
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@926666 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-bundles/extscript-myfaces12-bundle/pom.xml
+++ b/extscript-bundles/extscript-myfaces12-bundle/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.apache.myfaces.extension-scripting</groupId>
     <artifactId>extscript-myfaces12-bundle</artifactId>
     <packaging>jar</packaging>
-    <name>MyFaces Extension Scripting MyFaces 2.0 meta bundle</name>
+    <name>MyFaces Extension Scripting MyFaces 1.2 convenience meta bundle</name>
     <version>1.0-SNAPSHOT</version>
 
     <description>
