--- a/extscript-bundles/extscript-myfaces20-bundle/pom.xml
+++ b/extscript-bundles/extscript-myfaces20-bundle/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.apache.myfaces.extension-scripting</groupId>
     <artifactId>extscript-myfaces20-bundle</artifactId>
     <packaging>jar</packaging>
-    <name>MyFaces Extension Scripting MyFaces 2.0 meta bundle</name>
+    <name>MyFaces Extension Scripting MyFaces 2.0 convenience meta bundle</name>
     <version>1.0-SNAPSHOT</version>
 
     <description>
