--- a/extscript-bundles/extscript12-assembly/pom.xml
+++ b/extscript-bundles/extscript12-assembly/pom.xml
@@ -14,6 +14,12 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <scm>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-bundles/extscript12-assembly</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-bundles/extscript12-assembly</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-bundles/extscript12-assembly</url>
+    </scm>
+
     <build>
         <plugins>
             <plugin>
