--- a/extscript-core-root/extscript-core-java6/pom.xml
+++ b/extscript-core-root/extscript-core-java6/pom.xml
@@ -11,12 +11,18 @@
         myfaces extension scripting java6 lib
     </description>
 
-
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <artifactId>extscript-core-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    
+    <scm>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-core-java6</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-core-java6</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-core-java6</url>
+    </scm>
+
     <repositories>
         <repository>
             <id>maven2-repository.dev.java.net</id>
