--- a/extscript-core-root/extscript-myfaces2-extensions/pom.xml
+++ b/extscript-core-root/extscript-myfaces2-extensions/pom.xml
@@ -16,6 +16,12 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <scm>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-myfaces2-extensions</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-myfaces2-extensions</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-myfaces2-extensions</url>
+    </scm>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
