--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,9 @@
     </modules>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/
-        </developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk</url>
     </scm>
 
     <repositories>
@@ -208,9 +207,11 @@
                     <name>prepareRelease</name>
                 </property>
             </activation>
+            <!--
             <modules>
                 <module>assembly</module>
             </modules>
+            -->
             <build>
                 <plugins>
                     <plugin>
