[maven-release-plugin] rollback the release of 1_0_beta_1
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/branches/1.0_beta1_prepare@926880 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,10 @@
     </modules>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/
+        </developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/</url>
     </scm>
 
     <repositories>
