--- a/extscript-bundles/extscript20-assembly/pom.xml
+++ b/extscript-bundles/extscript20-assembly/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>extscript20-assembly</artifactId>
     <packaging>pom</packaging>
@@ -11,13 +10,13 @@
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <artifactId>extscript-bundles</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-beta-1</version>
     </parent>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-bundles/extscript20-assembly</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-bundles/extscript20-assembly</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-bundles/extscript20-assembly</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/1_0_beta_1/extscript-bundles/extscript20-assembly</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/branches/1_0_beta_1/extscript-bundles/extscript20-assembly</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/1_0_beta_1/extscript-bundles/extscript20-assembly</url>
     </scm>
 
     <build>
@@ -140,19 +139,19 @@
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>extscript-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-beta-1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>extscript-core-java6</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-beta-1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>extscript-myfaces2-extensions</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-beta-1</version>
             <scope>compile</scope>
         </dependency>
 
