--- a/extscript-bundles/pom.xml
+++ b/extscript-bundles/pom.xml
@@ -1,12 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.myfaces.extension-scripting</groupId>
     <artifactId>extscript-bundles</artifactId>
     <packaging>pom</packaging>
     <name>MyFaces Extension Scripting meta bundles</name>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-beta-1</version>
 
     <description>
         Meta bundles bundling the various ext-script
@@ -17,13 +15,13 @@
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <artifactId>extscript-root</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-beta-1</version>
     </parent>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-bundles</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-bundles</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-bundles</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/1_0_beta_1/extscript-bundles</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/branches/1_0_beta_1/extscript-bundles</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/1_0_beta_1/extscript-bundles</url>
     </scm>
 
     <modules>
