--- a/extscript-core-root/pom.xml
+++ b/extscript-core-root/pom.xml
@@ -1,11 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>extscript-core-root</artifactId>
     <packaging>pom</packaging>
     <name>MyFaces Extension Scripting Core Engine</name>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-beta-1</version>
 
     <description>
          MyFaces Extension Scripting Core Meta Project
@@ -14,13 +12,13 @@
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <artifactId>extscript-root</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-beta-1</version>
     </parent>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-core-root</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/1_0_beta_1/extscript-core-root</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/branches/1_0_beta_1/extscript-core-root</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/1_0_beta_1/extscript-core-root</url>
     </scm>
 
     <modules>
@@ -29,4 +27,4 @@
         <module>extscript-myfaces2-extensions</module>
         <module>extscript-core-java6</module>
     </modules>
-</project>	
+</project>
