http://issues.apache.org/jira/browse/EXTSCRIPT-105
adding leonardos beta repo to the trunk so that we are now on a stable version

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@927909 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,17 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>myfaces2beta3</id>
+            <url>http://people.apache.org/~lu4242/myfaces200beta3/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+
     </repositories>
 
     <dependencies>
