--- a/extscript-core-root/extscript-core/pom.xml
+++ b/extscript-core-root/extscript-core/pom.xml
@@ -79,7 +79,7 @@
             <scope>test</scope>
         </dependency>
 
-         <dependency>
+        <dependency>
             <groupId>javax.xml.stream</groupId>
             <artifactId>stax-api</artifactId>
             <version>1.0-2</version>
@@ -89,6 +89,11 @@
             <groupId>stax</groupId>
             <artifactId>stax</artifactId>
             <version>1.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>1.6.7</version>
         </dependency>
     </dependencies>
 
@@ -118,7 +123,7 @@
                             <goal>testCompile</goal>
                         </goals>
                     </execution>
-               </executions>
+                </executions>
                 <dependencies>
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
@@ -159,7 +164,7 @@
                             <shadedPattern>org.apache.myfaces.scripting.org.objectweb.asm</shadedPattern>
                         </relocation>
                     </relocations>
-               </configuration>
+                </configuration>
             </plugin>
         </plugins>
     </build>
