https://issues.apache.org/jira/browse/EXTSCRIPT-112
namespace change


git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@933660 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/myfaces20-example/pom.xml
+++ b/extscript-examples/myfaces20-example/pom.xml
@@ -76,6 +76,29 @@
             <artifactId>portlet-api</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <!-- bean validation dependencies -->
+         <dependency>
+            <groupId>org.apache.myfaces.extensions.validator</groupId>
+            <artifactId>myfaces-extval-core</artifactId>
+            <version>2.0.3</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.myfaces.extensions.validator.validation-modules</groupId>
+            <artifactId>myfaces-extval-property-validation</artifactId>
+            <version>2.0.3</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.myfaces.extensions.validator.validation-modules</groupId>
+            <artifactId>myfaces-extval-bean-validation</artifactId>
+            <version>2.0.3</version>
+            <scope>compile</scope>
+        </dependency>
+
         
         <dependency>
             <groupId>org.apache.myfaces.tomahawk</groupId>
