--- a/extscript-core-root/extscript-core-java6/pom.xml
+++ b/extscript-core-root/extscript-core-java6/pom.xml
@@ -37,13 +37,13 @@
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
-            <version>1.2.8</version>
+            <version>${myfaces12.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-impl</artifactId>
-            <version>1.2.8</version>
+            <version>${myfaces12.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
