--- a/extscript-examples/myfaces12-example/pom.xml
+++ b/extscript-examples/myfaces12-example/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>1.5.6</version>
+            <version>${groovy.version}</version>
         </dependency>
 
         <dependency>
@@ -39,14 +39,14 @@
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
-            <version>1.2.8</version>
+            <version>${myfaces12.version}</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-impl</artifactId>
-            <version>1.2.8</version>
+            <version>${myfaces12.version}</version>
             <scope>compile</scope>
         </dependency>
 
