--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <name>Myfaces Extension Scripting Project</name>
     <version>1.0-SNAPSHOT</version>
 
+    
+    <properties>
+        <myfaces12.version>1.2.8</myfaces12.version>
+        <myfaces2.version>2.0.0-SNAPSHOT</myfaces2.version>
+        <groovy.version>1.7.1</groovy.version>
+    </properties>
 
     <description>
         MyFaces Extension Scripting, scripting support and dynamic recompilation
